# pants-on-fire-eval

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
docs/: phase1-sampling-plan.md  postmortem.md  preregistration.md  proposal-spec-ablation.md  reproduction.md  single-turn-vs-multi-turn.md  statistical-methodology.md  step1-pilot.md
docs/archive/: postmortem.md  proposal-spec-ablation.md
docs/reports/: arxiv.typ  decomposition-pilot.docx  decomposition-pilot.md  decomposition-pilot.meta.yaml  render.sh  report-style.html
results/runs/2026-05-19T14-32-11_gpt-4o-mini_e1_l3/: summary.json
results/runs/2026-05-19T14-44-05_gpt-4o-mini_e3_lNone/: summary.json
results/runs/2026-05-19T14-51-19_gpt-4o-mini_e1_l3/: summary.json
results/runs/2026-05-19T15-11-30_gpt-4o-mini_e1_l3/: summary.json
results/runs/2026-05-19T15-41-02_gpt-4o-mini_e3_lNone/: summary.json
results/runs/2026-06-10T13-45-41_gpt-4o-mini_e3_lNone/: summary.json
results/runs/2026-06-10T19-23-00_gpt-4o-mini_e3_lNone/: summary.json
results/runs/2026-06-10T20-09-07_o4-mini_e1_lNone/: summary.json
src/pants_on_fire_eval/: __init__.py  __main__.py  analysis.py  decomposition.py  extract_icc.py  item_generation.py  items.py  phase2.py  scorers.py  stats.py  task.py
tests/: test_smoke.py  test_stats_vs_statsmodels.py
