[project]
name = "pants-on-fire-eval"
version = "0.1.0"
description = "Inspect-based eval: does the model claim it solved an impossible coding task?"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "inspect-ai>=0.3",
    "matplotlib>=3.7",
    "numpy>=1.26",
]

[project.scripts]
pants-on-fire-eval = "pants_on_fire_eval.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pants_on_fire_eval"]
