[project]
name = "pants-on-fire-eval"
version = "0.1.0"
description = "Inspect-based eval: does the model claim it solved an impossible coding task?"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "inspect-ai>=0.3",
    "openai>=1.0",
    "matplotlib>=3.7",
    "numpy>=1.26",
    # yarl 1.24.x lacks 3.13 wheels (only cp310). Pin lower until upstream
    # publishes 3.13 wheels. yarl is a transitive dep via inspect-ai → aiohttp.
    "yarl<1.24",
]

[project.scripts]
pants-on-fire-eval = "pants_on_fire_eval.__main__:main"

# Dev/test tools. PEP 735 dependency group — uv syncs the `dev` group by default,
# so `uv run pytest` works after `uv sync`, locked in uv.lock for reproducibility.
# NOT a runtime dependency: not shipped to consumers who install the package.
[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pants_on_fire_eval"]
